# blazar-specs

./: .gitreview  README.rst  setup.cfg  setup.py  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/specs/pike/: new-instance-reservation.rst
doc/source/specs/queens/: flavors-extra-specs.rst  state-machine.rst
doc/source/specs/rocky/: multi-freepools.rst  resource-availability.rst
doc/source/specs/stein/: floatingip-reservation.rst
doc/source/specs/train/: api-json-schema-validation.rst  train-template.rst
doc/source/specs/ussuri/: blazar-preemptible-instances.rst  flexible-reservation-usage-enforcement.rst  network-reservation.rst  resource-properties-api.rst  ussuri-template.rst
doc/source/specs/victoria/: victoria-template.rst
doc/source/specs/xena/: xena-template.rst
doc/source/specs/yoga/: yoga-template.rst
doc/source/specs/zed/: zed-template.rst
