[metadata]
name = blazar-specs
summary = Design specifications for the Blazar project
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://specs.openstack.org/openstack/blazar-specs/
classifier =
    Environment :: OpenStack
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
