[metadata]
name = blazar-specs
summary = Design specifications for the Blazar project
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = http://specs.openstack.org/openstack/blazar-specs/
classifier =
    Environment :: OpenStack
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
